crates/rim-merge/src/emit/snapshots/rim_merge__emit__tests__about_xml_patch_exactly_scope.snap
---
source: crates/rim-merge/src/emit.rs
assertion_line: 1438
expression: text
---
<?xml version="1.0" encoding="utf-8"?>
<ModMetaData>
  <packageId>sample.abcompat</packageId>
  <name>A + B Compatibility</name>
  <author>sample</author>
  <description>Compatibility patch generated by Rimmerge from field-level merge decisions.</description>
  <supportedVersions>
    <li>1.6</li>
  </supportedVersions>
  <modDependencies>
    <li>
      <packageId>example.bionicsfork</packageId>
      <displayName>Example Bionics Fork</displayName>
    </li>
    <li>
      <packageId>other.mod</packageId>
      <displayName>Other Mod</displayName>
    </li>
  </modDependencies>
  <loadAfter>
    <li>example.bionicsfork</li>
    <li>other.mod</li>
  </loadAfter>
</ModMetaData>
