crates/rim-merge/src/emit/snapshots/rim_merge__emit__tests__about_xml_worked_example.snap
---
source: crates/rim-merge/src/emit/emit_tests.rs
expression: text
---
<?xml version="1.0" encoding="utf-8"?>
<ModMetaData>
  <packageId>rimmerge.merge.3f9a1c2b7d5e</packageId>
  <name>Rimmerge merge patch</name>
  <author>Rimmerge</author>
  <description>Generated by Rimmerge from your merge decisions. Regenerated on every apply — do not edit by hand.</description>
  <supportedVersions>
    <li>1.6</li>
  </supportedVersions>
  <modDependencies>
    <li>
      <packageId>example.bionicsfork</packageId>
      <displayName>Example Bionics Fork</displayName>
    </li>
  </modDependencies>
  <loadAfter>
    <li>example.bionicsfork</li>
  </loadAfter>
</ModMetaData>
